--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "description": "Public repository for CS326 final project, team omega.",
-  "main": "./server.js",
+  "main": "./server/server.js",
   "directories": {
     "doc": "docs"
   },
