--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "echo $(cd)"
+    "start": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
