--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.3",
     "node-fetch": "^3.0.0",
     "npm": "^8.1.3",
+    "passport": "^0.5.0",
     "path": "^0.12.7"
   }
 }
